@@ -99,9 +99,12 @@ pub(crate) mod private {
 /// Put this macro inside a trait to seal it i.e. prevent extern implementations.
 #[macro_export]
 macro_rules! sealed {
-    () => {
+    (trait) => {
         /// This method prohibits implementation of this trait out side of its defining crate.
-        fn _not_implementable<P: $crate::private::Private>() {}
+        fn _not_implementable<Private: $crate::private::Private>();
+    };
+    (impl) => {
+        fn _not_implementable<Private: $crate::private::Private>() {}
     };
 }
 
